runs/github.com/m/mmcky/nyu-econ-370/logs/test-notebook-notebooks-intro-to-matplotlib.ipynb-2020-07-03T10.32.txt
  File "/src/inrepo.py", line 22
    log.info(f"Testing import of {modname}")
                                          ^
SyntaxError: invalid syntax

Container exited with status: {'Error': None, 'StatusCode': 1}
